client/src/index.css
/* ... */
.showarticlebutton:hover {
  /* background: #f25757; */
  box-shadow: 0px 2px 10px 5px #1abc9c;
  color: #000;
}
.getnewstocuratebutton:disabled {
  opacity: 0.5;
  cursor: not-allowed;
  background: #707070;
}
.hidearticlebutton {
  text-align: center;
  font-size: 14px;
  text-transform: uppercase;
  cursor: pointer;
  font-size: 13px;
  letter-spacing: 4px;
  position: relative;
  background-color: #ff0000;
  border: none;
  color: #fff;
  padding: 10px;
  width: 23%;
  margin-top: 5px;
  margin-bottom: 15px;
  text-align: center;
  transition-duration: 0.4s;
  overflow: hidden;
  box-shadow: 0 5px 15px #193047;
  border-radius: 4px;
  
}

.hidearticlebutton:hover {
  /* background: #00a738; */
  box-shadow: 0px 2px 10px 5px #1abc9c;
  color: #000;
}
.hidearticlebutton:disabled {
  opacity: 0.5;
  cursor: not-allowed;
  background: #707070;
}
/* Show / hide BUTTON end */






@media screen and (max-width: 600px) {

.tweetdiv{
  /* width: 100%; */
  height: 100%;
  border: 1px solid #ccc;
  border-radius: 5px;
  margin: 0px;
  box-shadow: 0 0 10px #ccc;
  display: flex;
  flex-direction: column;
  align-items: center;

}

/* small screen */
.card{
  justify-content: center;
  width: 94%;
  height: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
  background-color: #ffffff;
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 5px;
  margin: 2px;
  box-shadow: 0 0 10px #ccc;
}
/* small screen */
.card-image{
  border-radius: 10px;
  height: auto;
  margin-top: 10px;
  margin-bottom: 0px;
  margin-left: auto;
  margin-right: auto;
   /* change this along with .card-body width to adjust horizontal space */
  width:95%; 
  max-width: 95%;
}
/* small screen */
.card-body{
  align-items: left;
  margin-top: 10px;
  margin-bottom: 10px;
  margin-left: 20px;
  margin-right: 20px;
   /* change this along with .card-image width to adjust horizontal space */
  width: 90%;
  max-width: 90%;
}
/* small screen */
.card-title{
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 1.4rem;
  font-weight: 700;
  color: #000000;
}
/* small screen */
.card-text{
  font-size: 0.9rem;
  font-weight: 600;
  color: #000000;
}
.card-text-readfast{
  font-size: 0.9rem;
  font-weight: 400;
  color: #000000;
  margin-top: 10px;
  margin-bottom: 20px;
}
/* small screen */
.articledateandsourcetop{
  font-size: 0.8rem;
  margin-bottom: 0px;
  margin-top: 5px;
  margin-left: 20px;
  margin-right: 20px;
  color: #808080
}
.articledateandsource{
  font-size: 0.6rem;
  margin-bottom: 20px;
  color: #808080
}
  
  .header{
    width: 94%;
    height: 100%;
    background-color: #ffffff;
    border: 1px solid #ccc;
    border-radius: 5px;
    padding: 5px;
    flex-direction: column;
    /* display: block; */
    text-align: center;
    margin: 2px;
    box-shadow: 0 0 10px #ccc;
  }
  
  .maintitle{
    font-size: 1.9em;
    margin: 20px 0px 20px 5px;
  }

  .mainsubtitle .mainsubtitlelink{
    font-size: 0.3em;
  }
  .title {
    font-size: 1.1em;
    font-weight: 700;
    width: 80%;
  }
  .title1 {
    font-size: 1.1em;
    font-weight: 700;
    width: 80%;
    color: #333;
  }
  
  .card-text > span {
    font-size: 0.9rem;
    font-weight: 550;

  }

  .articledateandsource{
    font-size: 0.8rem;
  }

  .userIdTextBox .tagTextBox
  {
    width: 80%;
  } 

  .countrynewscard{
    height: 0.1em;  
    width: 60px;
  }
  .countrynewscardselected{
    height: 0.1em;  
    width: 60px;
  }

.scroll-to-top-button {
  position: fixed;
  bottom: 70px;
  right: 26px;
  /* padding: 22px 21px; */
  background-color: transparent;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  background-image: url('./gototop.png');
  background-size: 30px; 
  background-repeat: no-repeat;
  outline: none;
  opacity: 1;
}
.read-fast-button {
  position: fixed;
  bottom: 20px;
  right: 26px;
  /* padding: 22px 21px; */
  background-color: transparent;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  background-image: url('./readfast.png');
  background-size: 30px; 
  object-fit: cover;
  background-repeat: no-repeat;
  outline: none;
  opacity: 1;
}
.logoimage{
  /* position: fixed; */
  padding: 0px;
  width: 80px; 
  height: 80px; 
  background-image: url('./toplogo.svg');
  background-repeat: no-repeat;
  background-color: transparent;
  color: white;
  margin: 8px 0px 0px 0px;
  border: none;
}
.logonameimage{
  /* position: fixed; */
  /* padding: 0px; */
  width: 250px; 
  height: 60px; 
  background-image: url('./logonameimage.svg');
  background-repeat: no-repeat;
  background-color: transparent;
  color: white;
  margin: 30px -10px 0px 10px;
  border: none;
}
.laptopplaceholderdiv{
  display: none;
}
.mobileplaceholderdiv{
  display: block;
  width: 100%;
}
.terms-para{
  margin-left: 15px;
  margin-right: 15px;
  text-align: left;
}
.hidearticlebutton {
  width: 94%;
}
.showarticlebutton {
  width: 94%;
}
}

